Get rid of deprecates
new Integer() -> Integer.valueOf()